add_executable(graphtest graph_test.c)
add_executable(dijkstratest dijkstra_test.c)
add_executable(queuetest queue_test.c)
add_executable(datasettest dataset_test.c)
add_executable(integrationtest integration_test.c)

target_link_libraries(graphtest PUBLIC unity graph)
target_link_libraries(dijkstratest PUBLIC unity dijkstra queue)
target_link_libraries(queuetest PUBLIC unity queue)
target_link_libraries(datasettest PUBLIC unity dataset)
target_link_libraries(integrationtest PUBLIC unity dataset graph dijkstra)

add_test(NAME graph COMMAND graphtest)
add_test(NAME dijkstra COMMAND dijkstratest)
add_test(NAME queue COMMAND queuetest)
add_test(NAME dataset COMMAND datasettest)
add_test(NAME integration COMMAND integrationtest)